--- a/Mary.WindowsClient/Mary.WindowsClient.csproj
+++ b/Mary.WindowsClient/Mary.WindowsClient.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SubViews\" />
+  </ItemGroup>
+
 </Project>
