Update project build settings

--- a/Mary.Configs/appsettings.Development.json
+++ b/Mary.Configs/appsettings.Development.json
@@ -11,7 +11,7 @@
       "connectionString": "Host=127.0.0.1;Port=5432;Uid=postgres;Password=password;Database=database;"
     },
     "SqlServer": {
-      "connectionString": "Host=127.0.0.1;Port=5432;Uid=postgres;Password=password;Database=database;"
+      "connectionString": "Data Source=127.0.0.2;Initial Catalog=mary;User ID=sa;Password=ms_kalashnikov_73;"
     },
     "MySql": {
       "connectionString": "Host=127.0.0.1;Port=5432;Uid=postgres;Password=password;Database=database;"
